# passrs

./: .gitignore  Cargo.toml  LICENSE  shell.nix
src/: errors.rs  main.rs  pass_scanner.rs  test_util.rs
src/pgp/: invalid_key.asc  mod.rs  sample_entry.gpg  sample_key.asc  sample_key.pub.asc  test.rs
src/ui/: mod.rs
