[package]
name = "winpassrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.9.0"

anyhow = "*"
#clap = {version = "4.0.19", features=["derive"]}
env_logger = "*"
log = "*"
pgp = "*"
home = "0.5.5"

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",
]
